feat(): create a pagination using React Paginate

--- a/src/index.css
+++ b/src/index.css
@@ -3,19 +3,24 @@
 @tailwind utilities;
 
 @layer components {
-  .active-page-number {
-    @apply relative z-10 inline-flex items-center border border-neutral-500 bg-neutral-100 px-4 py-2 text-sm font-medium text-neutral-600 focus:z-20;
+  .page {
+    @apply relative inline-flex items-center border border-neutral-300 bg-white text-sm font-medium text-neutral-500 hover:bg-neutral-100;
   }
 
-  .page-number {
-    @apply relative inline-flex items-center border border-neutral-300 bg-white px-4 py-2 text-sm font-medium text-neutral-500 hover:bg-neutral-100 focus:z-20;
+  .page.active {
+    @apply z-10 border-neutral-500 bg-neutral-100 text-neutral-600;
   }
 
-  .previous-page-arrow {
-    @apply relative inline-flex items-center rounded-l-md border border-neutral-300 bg-white px-2 py-2 text-sm font-medium text-neutral-500 hover:bg-neutral-100 focus:z-20;
+  .page-link,
+  .break {
+    @apply px-4 py-2;
   }
 
-  .next-page-arrow {
-    @apply relative inline-flex items-center rounded-r-md border border-neutral-300 bg-white px-2 py-2 text-sm font-medium text-neutral-500 hover:bg-neutral-100 focus:z-20;
+  .page.previous {
+    @apply rounded-l-md px-2 py-2;
+  }
+
+  .page.next {
+    @apply rounded-r-md px-2 py-2;
   }
 }
