--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,7 @@
     @apply z-10 border-neutral-500 bg-neutral-100 text-neutral-600;
   }
 
-  .page-link,
-  .break {
+  .page-link {
     @apply px-4 py-2;
   }
 
